-Added parallax effect -Added scroll-snap -Fixed Scrollbar visibility -Broke Footer

--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -4,7 +4,7 @@
   text-align: center;
   padding: 1rem;
   height: 50px;
-  display: flex;
   align-items: center;
   justify-content: center;
+  position: sticky;
 }
